# franka_twins_ros2

./: .gitignore  README.md  gui.py
src/camera/: package.xml  setup.py
src/camera/camera/: yolo_realsense_node.py
src/franka_twins/: package.xml  setup.cfg  setup.py
src/franka_twins/franka_twins/:  PassCoke.py  cola_dual.py  sin_servol.py  wave.py  wave_dual.py
src/franka_twins/launch/: cola.launch.py  wave.launch.py
src/franka_twins_bringup/: CMakeLists.txt  package.xml
src/franka_twins_bringup/launch/: cola_bringup.launch.py  wave_bringup.launch.py
src/gripper/: CMakeLists.txt  package.xml
src/gripper/config/: config.rviz
src/gripper/launch/: display.launch.py  gripper.launch.py  gripper_dual.py  gripper_left.launch.py  gripper_right.launch.py
src/gripper/meshes/: base_link.dae  crank_Link.dae  distal_phalanx_Link.dae  proximal_phalanx_Link.dae  rod_Link.dae
src/gripper/src/: dh_gripper.cpp  dh_gripper.h  test_gripper.cpp
src/gripper/urdf/: gripper.transmission.xacro  gripper.urdf  gripper.urdf.xacro  gripper.xacro
src/script/: Haar_test.py  Mediapipe_detection.py  gui.py  gui_flask.py  gui_origin.py  robot_state.py  yolo_detect.py
src/tosor_msgs/: CMakeLists.txt  package.xml
src/tosor_msgs/msg/: GripperStates.msg
src/tosor_msgs/yaml/: movej_goal.yaml
